Issue #2503453 by mgifford, bobrov1989, rikki_iki, kattekrab, LewisNyman: Increase contrast on inline form error text

--- a/core/themes/bartik/css/components/form.css
+++ b/core/themes/bartik/css/components/form.css
@@ -277,5 +277,5 @@ input.form-submit:focus {
 
 /* Form error message styles. */
 .form-item--error-message {
-  color: #ea2800;
+  color: #e32700;
 }
